11153
Duplicate of scala/bug#6385, fixed in 2.11.0.
```scala
% scalac-hash v2.10.4 sandbox/test.scala
sandbox/test.scala:9: error: bridge generated for member method foo: ()Trait.V[String] in class C
which overrides method foo: ()Trait.V[_] in trait Trait
clashes with definition of the member itself;
both have erased type ()Int
  override protected final def foo: Trait.V[String] = new Trait.V[String](0)
                               ^
one error found
% scalac-hash v2.11.0 sandbox/test.scala
%
```
